# RTS

./: 07_parametric_gates.ipynb  08_multi_qubit_chain_arp.ipynb  CITATION.cff  Equations.md  README.md  SAFETY.md  TEMPLATE_hydride_film_inputs.csv  TEMPLATE_squid_film_inputs.csv  add_Lk_Istar_1uA.ipynb  arp_fit_new.py  arp_fit_overlay.py  chain_report.json  iswap_pulse_template.json  jj_fluxpump_sweep.ipynb  jj_lattice_homogenization.py  pyproject.toml  quantum_chain.py  quantum_shot_requirements.csv  report.json  requirements_table.csv  rts.toml  sample_dft_hydride_curves.csv  sample_exp_H3S.csv  sample_exp_YBCO.csv  summary.json
.github/workflows/: ci.yml  release.yml
bench_out/: .gitignore
examples/: 01_hydride_overlay.ipynb
rts/: cli.py  config.py  reporting.py
